Worked on mobile bug

--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -7,7 +7,7 @@
     flex-direction: column;
   }
   @include mobile-screen {
-    overflow: hidden;
+    // overflow: hidden;
   }
   .left-side {
     flex: 0.5;
@@ -24,9 +24,13 @@
       flex: 0.3;
       min-height: 440px;
     }
+    @include mobile-screen {
+      flex: 0.6;
+      min-height: fit-content;
+    }
 
     @include mobile-screen {
-      min-height: 260px;
+      min-height: fit-content;
     }
     .photo-container {
       width: 70%;
@@ -69,6 +73,10 @@
     @include small-screen {
       flex: 0.7;
 
+    }
+    @include mobile-screen {
+      flex: 0.7;
+      min-height: fit-content;
     }
   
 
@@ -168,7 +176,7 @@
       color: black;
 
       @include mobile-screen {
-        bottom: 40px;
+        bottom: 50px;
       }
 
       .arrow-down-icon {
